[gd_scene load_steps=14 format=3 uid="uid://cu0dekl1v85pm"]

[ext_resource type="Script" uid="uid://bylp3g1a3lxc6" path="res://Scripts/main_menu.gd" id="1_n45e2"]
[ext_resource type="Texture2D" uid="uid://cw86kqehi2mkm" path="res://Assets/backgroundimg.png" id="2_opfnp"]
[ext_resource type="AudioStream" uid="uid://bd5nuxex0r2md" path="res://Assets/Luigi Scream.mp3" id="3_cp0ys"]
[ext_resource type="AudioStream" uid="uid://bilt101cyjgu1" path="res://Assets/THE WORLD REVOLVING.mp3" id="4_yhxw7"]
[ext_resource type="Script" uid="uid://d2gok5i08rkx2" path="res://Scripts/audio_controll.gd" id="5_trj04"]
[ext_resource type="Script" uid="uid://binfeuwcqo55r" path="res://Scenes/fullscreen_control.gd" id="6_opfnp"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_7vrkn"]
texture = ExtResource("2_opfnp")
modulate_color = Color(0.6052743, 0.6052743, 0.6052743, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fu7sn"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_offset = Vector2(0, 3.4)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jix8l"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_glbon"]
bg_color = Color(0.41598046, 0.41598046, 0.41598028, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fu7sn"]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_jix8l"]
color = Color(0.8431839, 0.8431839, 0.84318376, 1)
thickness = 6

[sub_resource type="StyleBoxLine" id="StyleBoxLine_glbon"]
color = Color(0.7081948, 0.04201132, 0.14823258, 1)
thickness = 6

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_n45e2")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_7vrkn")

[node name="MainButtons" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -162.0
offset_top = -107.0
offset_right = 165.0
offset_bottom = 107.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Button" type="Button" parent="MainButtons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 42
theme_override_styles/normal = SubResource("StyleBoxFlat_fu7sn")
theme_override_styles/pressed = SubResource("StyleBoxFlat_jix8l")
theme_override_styles/hover = SubResource("StyleBoxFlat_glbon")
theme_override_styles/focus = SubResource("StyleBoxEmpty_fu7sn")
text = "Start"

[node name="Button2" type="Button" parent="MainButtons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 42
theme_override_styles/normal = SubResource("StyleBoxFlat_fu7sn")
theme_override_styles/pressed = SubResource("StyleBoxFlat_jix8l")
theme_override_styles/hover = SubResource("StyleBoxFlat_glbon")
theme_override_styles/focus = SubResource("StyleBoxEmpty_fu7sn")
text = "Options"

[node name="scream" type="AudioStreamPlayer" parent="MainButtons/Button2"]
stream = ExtResource("3_cp0ys")
bus = &"SFX"

[node name="Button3" type="Button" parent="MainButtons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 42
theme_override_styles/normal = SubResource("StyleBoxFlat_fu7sn")
theme_override_styles/pressed = SubResource("StyleBoxFlat_jix8l")
theme_override_styles/hover = SubResource("StyleBoxFlat_glbon")
theme_override_styles/focus = SubResource("StyleBoxEmpty_fu7sn")
text = "Exit"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -138.0
offset_top = -238.0
offset_right = 143.0
offset_bottom = -183.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 40
text = "SCP: Taskforce"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_yhxw7")
autoplay = true
bus = &"Music"

[node name="Options" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -208.0
offset_top = -142.0
offset_right = 208.0
offset_bottom = 142.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Options"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 24
text = "Options"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Return" type="Button" parent="Options"]
layout_mode = 0
offset_left = 45.0
offset_top = 192.0
offset_right = 372.0
offset_bottom = 250.0
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 42
theme_override_styles/normal = SubResource("StyleBoxFlat_fu7sn")
theme_override_styles/pressed = SubResource("StyleBoxFlat_jix8l")
theme_override_styles/hover = SubResource("StyleBoxFlat_glbon")
theme_override_styles/focus = SubResource("StyleBoxEmpty_fu7sn")
text = "Return"

[node name="AudioControll" type="HSlider" parent="Options"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.48600003
anchor_top = 0.296
anchor_right = 0.48600003
anchor_bottom = 0.296
offset_left = -128.17601
offset_top = -8.064003
offset_right = 127.82399
offset_bottom = 7.935997
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/slider = SubResource("StyleBoxLine_jix8l")
theme_override_styles/grabber_area = SubResource("StyleBoxLine_glbon")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxLine_glbon")
max_value = 1.0
step = 0.01
value = 1.0
script = ExtResource("5_trj04")
audio_bus_name = "Music"

[node name="FullscreenControl" type="CheckBox" parent="Options"]
layout_direction = 3
layout_mode = 1
anchors_preset = -1
anchor_left = 0.70600003
anchor_top = 0.44900003
anchor_right = 0.73200005
anchor_bottom = 0.44900003
offset_left = -210.69601
offset_top = -15.516006
offset_right = 41.487976
offset_bottom = 15.483994
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_outline_color = Color(0.62663716, 0.21130681, 0.22424504, 1)
text = "Fullscreen"
script = ExtResource("6_opfnp")

[connection signal="pressed" from="MainButtons/Button" to="." method="_on_start_pressed"]
[connection signal="pressed" from="MainButtons/Button2" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MainButtons/Button3" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="Options/Return" to="." method="_on_return_options_pressed"]
[connection signal="value_changed" from="Options/AudioControll" to="Options/AudioControll" method="_on_value_changed"]
[connection signal="toggled" from="Options/FullscreenControl" to="Options/FullscreenControl" method="_on_toggled"]
